--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   expandable_text: ^2.3.0
+  iconsax: ^0.0.8
 
 dev_dependencies:
   flutter_test:
